turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:15: error: type mismatch;
 found   : Int
 required: java.awt.Color
			setCouleurBrosse(c)
                                         ^